2010-11-12  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by David Hyatt.

        Spatial Navigation: Cannot focus on some ContainerNode
        https://bugs.webkit.org/show_bug.cgi?id=48393

        * fast/events/spatial-navigation/snav-container-only-white-space-expected.txt: Added.
        * fast/events/spatial-navigation/snav-container-only-white-space.html: Added.
        * fast/events/spatial-navigation/snav-container-white-space-expected.txt: Added.
        * fast/events/spatial-navigation/snav-container-white-space.html: Added.
2010-11-12  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by David Hyatt.

        Spatial Navigation: Cannot focus on some ContainerNode
        https://bugs.webkit.org/show_bug.cgi?id=48393

        ContainerNode::getLowerRightCorner() assumes that the lowest right corner of its last child
        is its own lowest right corner. If that child is an empty text node after an image, it does
        not have size and position information, so we should go to the previous child.

        Tests: fast/events/spatial-navigation/snav-container-only-white-space.html
               fast/events/spatial-navigation/snav-container-white-space.html

        * dom/ContainerNode.cpp:
        (WebCore::ContainerNode::getLowerRightCorner):

Canonical link: https://commits.webkit.org/62427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71956 268f45cc-cd09-0410-ab3c-d52691b4dbfc